[gd_scene load_steps=42 format=2]

[ext_resource path="res://Instanciaveis/Inimigos/Inimigo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/Yama/Yama22.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Yama/Yama23.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Yama/Yama20.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Yama/Yama17.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Yama/Yama8.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Yama/Yama21.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Yama/Yama16.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Yama/Yama12.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Yama/Yama5.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Yama/Yama6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Yama/Yama7.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Yama/Yama10.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Yama/Yama4.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Yama/Yama1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Yama/Yama3.png" type="Texture" id=16]
[ext_resource path="res://Instanciaveis/Estados/Inimigo/EstadoAnimado.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/Sprites/Yama/Yama13.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Yama/Yama9.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Yama/Yama2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/Yama/Yama19.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/Yama/Yama14.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/Yama/Yama18.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/Yama/Yama15.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/Yama/Yama11.png" type="Texture" id=25]
[ext_resource path="res://Conteudos/Shaders/ShaderPersonagem.shader" type="Shader" id=26]
[ext_resource path="res://Instanciaveis/Projeteis/InfoProjetil.tscn" type="PackedScene" id=27]
[ext_resource path="res://Instanciaveis/Projeteis/SistemaTiros.tscn" type="PackedScene" id=28]
[ext_resource path="res://Instanciaveis/Projeteis/ProjetilBolaDeFogo.tscn" type="PackedScene" id=29]
[ext_resource path="res://Instanciaveis/Scripts/OuvinteDeEventosYama.gd" type="Script" id=30]
[ext_resource path="res://Instanciaveis/Scripts/SistemaSpawnInimigo.tscn" type="PackedScene" id=31]
[ext_resource path="res://Instanciaveis/Inimigos/GuardaNaraka.tscn" type="PackedScene" id=32]
[ext_resource path="res://Conteudos/Particulas/ParticulasSpawnInimigo.tscn" type="PackedScene" id=33]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 26 )
shader_param/brilho_purificacao = 5.0
shader_param/progresso_purificacao = 0.0
shader_param/coeficiente_mix_dano = 0.0
shader_param/cor_purificacao = Color( 0.360784, 0.847059, 1, 1 )
shader_param/cor_dano = Color( 1, 0, 0, 1 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "spawnando",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "preparando_spawn",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 20 ) ],
"loop": true,
"name": "parado",
"speed": 3.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 13 ), ExtResource( 25 ) ],
"loop": true,
"name": "preparando_ataque_direita",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 6 ) ],
"loop": true,
"name": "atacando_esquerda",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 23 ) ],
"loop": true,
"name": "atacando_ambos",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 24 ), ExtResource( 8 ) ],
"loop": true,
"name": "preparando_ataque_ambos",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "preparando_ataque_esquerda",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 18 ) ],
"loop": true,
"name": "atacando_direita",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]

[sub_resource type="Animation" id=4]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "preparando_ataque_esquerda", "atacando_esquerda" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1, 0, 1, 0, 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../../SistemaTiros")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 0.0, false ],
"method": "atirar"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../SistemaTiros")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 90.0, false ],
"method": "atirar"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../../SistemaTiros")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 180.0, false ],
"method": "atirar"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../../SistemaTiros")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 270.0, false ],
"method": "atirar"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "preparando_ataque_direita", "atacando_direita" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1, 0, 1, 0, 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../../SistemaTiros")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 45.0, false ],
"method": "atirar"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../SistemaTiros")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 135.0, false ],
"method": "atirar"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../../SistemaTiros")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 225.0, false ],
"method": "atirar"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../../SistemaTiros")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 315.0, false ],
"method": "atirar"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "preparando_ataque_ambos", "atacando_ambos" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1, 0, 1, 0, 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../../SistemaTiros")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 45.0, true ],
"method": "atirar"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../SistemaTiros")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 135.0, true ],
"method": "atirar"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../../SistemaTiros")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 225.0, true ],
"method": "atirar"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../../SistemaTiros")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 315.0, true ],
"method": "atirar"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("../../SistemaTiros")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 0.0, true ],
"method": "atirar"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("../../SistemaTiros")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 90.0, true ],
"method": "atirar"
} ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("../../SistemaTiros")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 180.0, true ],
"method": "atirar"
} ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("../../SistemaTiros")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "InfoProjetil", 270.0, true ],
"method": "atirar"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "preparando_spawn", "spawnando" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1, 0, 1, 0, 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../../SistemaSpawnInimigo")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ ExtResource( 32 ), ExtResource( 33 ), Vector2( 10, 30 ) ],
"method": "spawnar_raio_aleatorio"
} ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 219.659

[node name="Yama" instance=ExtResource( 1 )]
vida_maxima = 30.0
purificacao_maxima = 15.0
velocidade = 0.0

[node name="Sombra" parent="." index="0"]
position = Vector2( 0, -7 )
scale = Vector2( 2.5, 2.22222 )

[node name="OuvinteDeEventosYama" type="Node" parent="." index="1"]
script = ExtResource( 30 )

[node name="Sprite" parent="." index="2"]
material = SubResource( 2 )
position = Vector2( 0, -32 )
frames = SubResource( 1 )
animation = "preparando_ataque_ambos"

[node name="Colisao" parent="." index="3"]
position = Vector2( 0, -7 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Hitbox" parent="." index="4"]
position = Vector2( 0, -7 )

[node name="FormatoColisao" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="GerenciadorEstados" parent="." index="8"]
estado_inicial = "Parado"

[node name="AtaqueRadial1" parent="GerenciadorEstados" index="0" instance=ExtResource( 17 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GerenciadorEstados/AtaqueRadial1" index="0"]
anims/default = SubResource( 4 )

[node name="AtaqueRadial2" parent="GerenciadorEstados" index="1" instance=ExtResource( 17 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GerenciadorEstados/AtaqueRadial2" index="0"]
root_node = NodePath("../../AtaqueRadial1")
anims/default = SubResource( 5 )

[node name="AtaqueRadial3" parent="GerenciadorEstados" index="2" instance=ExtResource( 17 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GerenciadorEstados/AtaqueRadial3" index="0"]
root_node = NodePath("../../AtaqueRadial1")
anims/default = SubResource( 6 )

[node name="AtaqueSpawn" parent="GerenciadorEstados" index="3" instance=ExtResource( 17 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GerenciadorEstados/AtaqueSpawn" index="0"]
root_node = NodePath("../../AtaqueRadial1")
anims/default = SubResource( 7 )

[node name="SistemaTiros" parent="." index="9" instance=ExtResource( 28 )]

[node name="InfoProjetil" parent="SistemaTiros" index="0" instance=ExtResource( 27 )]
projetil = ExtResource( 29 )
dano = 1

[node name="SistemaSpawnInimigo" parent="." index="10" instance=ExtResource( 31 )]
max_inimigos = 3

[node name="Visao" type="Area2D" parent="." index="11"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visao" index="0"]
shape = SubResource( 8 )

[connection signal="finalizado" from="GerenciadorEstados/AtaqueRadial1" to="OuvinteDeEventosYama" method="escolher_ataque"]
[connection signal="finalizado" from="GerenciadorEstados/AtaqueRadial2" to="OuvinteDeEventosYama" method="escolher_ataque"]
[connection signal="finalizado" from="GerenciadorEstados/AtaqueRadial3" to="OuvinteDeEventosYama" method="escolher_ataque"]
[connection signal="finalizado" from="GerenciadorEstados/AtaqueSpawn" to="OuvinteDeEventosYama" method="escolher_ataque"]
[connection signal="body_entered" from="Visao" to="OuvinteDeEventosYama" method="_on_Visao_body_entered"]
[connection signal="body_exited" from="Visao" to="OuvinteDeEventosYama" method="_on_Visao_body_exited"]
