extends Node

const ATAQUES: Array = [
	"AtaqueRadial1",
	"AtaqueRadial2",
	"AtaqueRadial3",
	"AtaqueSpawn", # DEIXE ATAQUESPAWN POR ÃšLTIMO!!!!!
]
const NODE_SISTEMA_SPAWN := "SistemaSpawnInimigo"

onready var inimigo = get_parent()

func _ready():
	call_deferred("escolher_ataque")


func escolher_ataque() -> void:
	randomize()
	var num_ataques := ATAQUES.size() - 1 if owner.get_node(NODE_SISTEMA_SPAWN).limite_foi_atingido() else ATAQUES.size()
	inimigo.mudar_de_estado(ATAQUES[randi() % num_ataques])
